# TopicModelingFuzzy

./: CMakeLists.txt  Gibbs-LDA.cpp  README.md  archive.sh  clean.sh  fuzzy-LDA.cpp
Datasets/: fuzzy-corpus.txt  my_vocabs.txt  top_basis_terms.txt
GDB/: fuzzy_lda.gdb  lda.gdb
Python/: mk_acc_plot.py  run_tests.py
